--- a/assets/css/vars.less
+++ b/assets/css/vars.less
@@ -18,7 +18,9 @@
 @gray800: #32325d;
 @gray900: #212529;
 @default-font-size: 14px;
-@large-font-size: 16px;
+@small-font-size: 14px;
+@middle-font-size: 16px;
+@large-font-size: 18px;
 @font-weight-bold: bold;
 @font-weight-normal: normal;
 @default-border-color: #d9d9d9;
