--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -1,44 +1,54 @@
 @import '../../assets/css/index.less';
+
+@md-height: 32px;
+@lg-height: 40px;
+@sm-height: 24px;
+
 .km-input {
   position: relative;
   display: inline-box;
   box-sizing: border-box;
   width: 100%;
   max-width: 300px;
-  padding: 2px 11px;
+  padding: 4px 11px;
   background-color: @white;
   border: 1px solid @gray500;
   border-radius: 5px;
   outline: none;
-  &:focus {
+  &:focus,
+  &:hover {
     border: 1px solid @primary;
     box-shadow: 0px 0px 2px 0px @primary;
   }
   &-border-none {
     border: none;
-    &:focus {
+    &:focus,
+    &:hover {
       border: none;
       box-shadow: none;
     }
   }
+  // size大小
   &-md {
-    height: 32px;
+    // height: @md-height;
     font-size: @middle-font-size;
   }
   &-lg {
-    height: 40px;
-    padding: 4px 11px;
+    // height: @lg-height;
+    padding: 7px 11px;
     font-size: @large-font-size;
   }
   &-sm {
-    height: 24px;
+    // height: @sm-height;
     padding: 1px 11px;
     font-size: @small-font-size;
   }
+  // 状态样式
   &-error {
     background-color: @white;
     border: 1px solid @error;
-    &:focus {
+    &:focus,
+    &:hover {
       border: 1px solid @error;
       box-shadow: 0px 0px 2px 0px @error;
     }
@@ -46,14 +56,80 @@
   &-warning {
     background-color: @white;
     border: 1px solid @warning;
-    &:focus {
+    &:focus,
+    &:hover {
       border: 1px solid @warning;
       box-shadow: 0px 0px 2px 0px @warning;
     }
   }
+  // 前后元素的包裹
+  &-affix-wrapper {
+    position: relative;
+    display: inline-flex;
+    // align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    width: 100%;
+    min-width: 0;
+    max-width: 300px;
+    padding: 4px 11px;
+    font-size: 14px;
+    line-height: 1.5715;
+    background-color: @white;
+    background-image: none;
+    border: 1px solid @gray500;
+    border-radius: 5px;
+    transition: all 0.3s;
+    .km-input {
+      padding: 2px 0px;
+    }
+    &:focus-within,
+    &:hover {
+      border: 1px solid @primary;
+      box-shadow: 0px 0px 2px 0px @primary;
+    }
+    &-md {
+      height: @md-height;
+    }
+    .km-input-suffix,
+    .km-input-prefix {
+      display: flex;
+      flex: none;
+      align-items: center;
+    }
+    .km-input-prefix {
+      margin-right: 4px;
+    }
+    .km-input-suffix {
+      margin-left: 4px;
+    }
+  }
+
+  // 前后组件包裹
+  &-wrapper {
+    position: relative;
+    display: table;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-variant: tabular-nums;
+    list-style: none;
+    border-collapse: separate;
+    border-spacing: 0;
+    .km-input-group-addon {
+      position: relative;
+      padding: 0 11px;
+      text-align: center;
+      background-color: @white;
+      border: 1px solid @gray500;
+      border-radius: 2px;
+      transition: all 0.3s;
+    }
+  }
 }
 
-.kw-ipt-close {
+.km-ipt-close {
   position: absolute;
   top: 0;
   left: 0;
@@ -61,8 +137,3 @@
   width: 20px;
   height: 20px;
 }
-
-// .kw-input-error {
-// }
-// .kw-input-waring {
-// }
