--- a/assets/css/vars.less
+++ b/assets/css/vars.less
@@ -24,3 +24,4 @@
 @default-border-color: #d9d9d9;
 @default-fillet: 2px;
 @font-family: '-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji';
+@border-light-color: #f0f0f0;
