--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -1,7 +1,6 @@
-@import '../../assets/css/index.less';
 .km-btn {
   position: relative;
-  display: inline-box;
+  display: inline-block;
   box-sizing: border-box;
   min-width: 88px;
   height: 32px;
